ingresscontrollers/traefik/acme-blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-blog-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: www.example.org
    http:
      paths:
      - path: /blog
        backend:
          serviceName: acme-blog
          servicePort: 80
