ingresscontrollers/traefik/acme-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: www.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-website
          servicePort: 80
      - path: /blog
        backend:
          serviceName: acme-blog
          servicePort: 80
